[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scenes/world/overworld.gd" id="1"]
[ext_resource type="Script" path="res://scenes/world/overworld_player.gd" id="2"]
[ext_resource type="Script" path="res://scenes/world/fast_travel_menu.gd" id="3"]
[ext_resource type="PackedScene" path="res://scenes/world/location_marker.tscn" id="4"]
[ext_resource type="Resource" path="res://data/locations/town_start.tres" id="5"]
[ext_resource type="Resource" path="res://data/locations/dungeon_cave.tres" id="6"]
[ext_resource type="PackedScene" path="res://scenes/world/roaming_enemy.tscn" id="7"]
[ext_resource type="Resource" path="res://data/encounters/encounter_slimes.tres" id="8"]
[ext_resource type="Resource" path="res://data/encounters/encounter_goblins.tres" id="9"]

[sub_resource type="RectangleShape2D" id="player_collision"]
size = Vector2(32, 32)

[node name="Overworld" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_left = -1000.0
offset_top = -1000.0
offset_right = 3000.0
offset_bottom = 2000.0
color = Color(0.2, 0.4, 0.2, 1)

[node name="GridLines" type="Node2D" parent="."]

[node name="VLine1" type="ColorRect" parent="GridLines"]
offset_left = 0.0
offset_top = -1000.0
offset_right = 2.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine2" type="ColorRect" parent="GridLines"]
offset_left = 200.0
offset_top = -1000.0
offset_right = 202.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine3" type="ColorRect" parent="GridLines"]
offset_left = 400.0
offset_top = -1000.0
offset_right = 402.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine4" type="ColorRect" parent="GridLines"]
offset_left = 600.0
offset_top = -1000.0
offset_right = 602.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine5" type="ColorRect" parent="GridLines"]
offset_left = 800.0
offset_top = -1000.0
offset_right = 802.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine6" type="ColorRect" parent="GridLines"]
offset_left = 1000.0
offset_top = -1000.0
offset_right = 1002.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine7" type="ColorRect" parent="GridLines"]
offset_left = 1200.0
offset_top = -1000.0
offset_right = 1202.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine8" type="ColorRect" parent="GridLines"]
offset_left = 1400.0
offset_top = -1000.0
offset_right = 1402.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine9" type="ColorRect" parent="GridLines"]
offset_left = 1600.0
offset_top = -1000.0
offset_right = 1602.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="VLine10" type="ColorRect" parent="GridLines"]
offset_left = 1800.0
offset_top = -1000.0
offset_right = 1802.0
offset_bottom = 2000.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine1" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 0.0
offset_right = 3000.0
offset_bottom = 2.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine2" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 200.0
offset_right = 3000.0
offset_bottom = 202.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine3" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 400.0
offset_right = 3000.0
offset_bottom = 402.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine4" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 600.0
offset_right = 3000.0
offset_bottom = 602.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine5" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 800.0
offset_right = 3000.0
offset_bottom = 802.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="HLine6" type="ColorRect" parent="GridLines"]
offset_left = -1000.0
offset_top = 1000.0
offset_right = 3000.0
offset_bottom = 1002.0
color = Color(0.15, 0.3, 0.15, 1)

[node name="Landmark1" type="ColorRect" parent="."]
offset_left = 400.0
offset_top = 300.0
offset_right = 450.0
offset_bottom = 350.0
color = Color(0.8, 0.6, 0.2, 1)

[node name="Label" type="Label" parent="Landmark1"]
offset_left = 5.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 30.0
text = "Town"
horizontal_alignment = 1

[node name="Landmark2" type="ColorRect" parent="."]
offset_left = 1200.0
offset_top = 600.0
offset_right = 1250.0
offset_bottom = 650.0
color = Color(0.5, 0.3, 0.2, 1)

[node name="Label" type="Label" parent="Landmark2"]
offset_left = 5.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 30.0
text = "Cave"
horizontal_alignment = 1

[node name="Landmark3" type="ColorRect" parent="."]
offset_left = 800.0
offset_top = 800.0
offset_right = 850.0
offset_bottom = 850.0
color = Color(0.3, 0.5, 0.8, 1)

[node name="Label" type="Label" parent="Landmark3"]
offset_left = 5.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 30.0
text = "Lake"
horizontal_alignment = 1

[node name="TileMapLayer" type="TileMapLayer" parent="."]
collision_enabled = true

[node name="LocationMarkers" type="Node2D" parent="."]

[node name="TownMarker" parent="LocationMarkers" instance=ExtResource("4")]
position = Vector2(425, 325)
location_data = ExtResource("5")

[node name="CaveMarker" parent="LocationMarkers" instance=ExtResource("4")]
position = Vector2(1225, 625)
location_data = ExtResource("6")

[node name="Enemies" type="Node2D" parent="."]

[node name="Slime1" parent="Enemies" instance=ExtResource("7")]
position = Vector2(600, 400)
encounter_data = ExtResource("8")
enemy_color = Color(0.3, 1, 0.3, 1)

[node name="Slime2" parent="Enemies" instance=ExtResource("7")]
position = Vector2(800, 600)
encounter_data = ExtResource("8")
enemy_color = Color(0.3, 1, 0.3, 1)

[node name="Goblin1" parent="Enemies" instance=ExtResource("7")]
position = Vector2(500, 700)
encounter_data = ExtResource("9")
enemy_color = Color(1, 0.3, 0.3, 1)

[node name="Goblin2" parent="Enemies" instance=ExtResource("7")]
position = Vector2(1100, 400)
encounter_data = ExtResource("9")
enemy_color = Color(1, 0.3, 0.3, 1)

[node name="Slime3" parent="Enemies" instance=ExtResource("7")]
position = Vector2(1300, 700)
encounter_data = ExtResource("8")
enemy_color = Color(0.3, 1, 0.3, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(960, 540)
collision_layer = 2
collision_mask = 1
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.3, 0.6, 1, 1)

[node name="Label" type="Label" parent="Player"]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
text = "YOU"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("player_collision")

[node name="InteractionArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractionArea"]
position = Vector2(0, -16)
shape = SubResource("player_collision")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GoldLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 20
text = "Gold: 0"

[node name="LocationLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -48.0
offset_right = 200.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
text = ""
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 16.0
offset_right = 300.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Arrow keys or WASD to move | T for fast travel | ESC for menu | I for inventory"
horizontal_alignment = 1

[node name="FastTravelMenu" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="MarginContainer" type="MarginContainer" parent="UI/FastTravelMenu"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/FastTravelMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="UI/FastTravelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fast Travel"
horizontal_alignment = 1

[node name="LocationList" type="ItemList" parent="UI/FastTravelMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="UI/FastTravelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ConfirmButton" type="Button" parent="UI/FastTravelMenu/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Confirm"

[node name="CancelButton" type="Button" parent="UI/FastTravelMenu/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
